--- a/iitmdiss.cls
+++ b/iitmdiss.cls
@@ -202,7 +202,7 @@ footskip=30pt,bottom=1in]{geometry}
 
   \vspace*{0.75in}
   %\centerline{\psfig{figure=emblem.ps}}
-  \centerline{\includegraphics[scale=0.3]{iitm.eps}}
+  \centerline{\includegraphics[scale=0.3]{iitm-eps-converted-to.pdf}}
   \vspace*{-0.15in}
   \begin{center}
     {\bf \large DEPARTMENT OF \MakeUppercase{\@department}\par}
